# ChangeLog for media-plugins/kipi-plugins
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.119 2012/08/06 17:51:17 ago Exp $

  06 Aug 2012; Agostino Sarubbo <ago@gentoo.org> kipi-plugins-2.6.0.ebuild:
  Stable for amd64, wrt bug #429842

*kipi-plugins-2.7.0 (09 Jul 2012)

  09 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +kipi-plugins-2.7.0.ebuild:
  Version bump

*kipi-plugins-2.6.0 (07 Jun 2012)

  07 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -files/kipi-plugins-2.0.0-tests.patch, -kipi-plugins-2.4.1.ebuild,
  -kipi-plugins-2.6.0_beta3.ebuild, -kipi-plugins-2.6.0_rc.ebuild,
  +kipi-plugins-2.6.0.ebuild:
  Version bump; remove old, beta, and rc

*kipi-plugins-2.6.0_rc (13 May 2012)

  13 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +kipi-plugins-2.6.0_rc.ebuild:
  Version bump

  18 Apr 2012; Markus Meier <maekke@gentoo.org> kipi-plugins-2.5.0.ebuild:
  x86 stable, bug #409403

*kipi-plugins-2.6.0_beta3 (08 Apr 2012)

  08 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -kipi-plugins-2.3.0.ebuild, +kipi-plugins-2.6.0_beta3.ebuild,
  +files/kipi-plugins-2.6.0_beta3-options.patch:
  Version bump; remove old

  04 Apr 2012; Agostino Sarubbo <ago@gentoo.org> kipi-plugins-2.5.0.ebuild:
  Stable for amd64, wrt bug #409403

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> kipi-plugins-2.4.1.ebuild:
  Stable for amd64, wrt bug #396359

  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  kipi-plugins-2.4.1.ebuild:
  x86 stable wrt bug #396359

*kipi-plugins-2.5.0 (03 Jan 2012)

  03 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +kipi-plugins-2.5.0.ebuild:
  Version bump

  25 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kipi-plugins-1.9.0.ebuild, -files/kipi-plugins-1.9.0-tests.patch:
  Remove old

  07 Dec 2011; Markos Chandras <hwoarang@gentoo.org> kipi-plugins-2.3.0.ebuild:
  Stable on amd64 wrt bug #388279
